# visao-computacional

./: .gitignore  .gitmodules  README.md  TODO.md  coco.json  convert_hrnet.py  database.db  docker-compose.yml  far_frr.ipynb  flake.nix  global_var.py  index.html  inference-draw.py  inference-old.py  inference.py  main.ipynb  main.py  notebook.ipynb  poc.html  pre_process_casia_webface.py  process_rois.py  pyproject.toml  test.py  train_feature_extractor.py  train_hrnet.ipynb
.vim/: coc-settings.json
PalmALNet/: README.md
PalmALNet/CROI/: dataset.py  predict.py  train.py
PalmALNet/CROI/backbone/: dlanet.py  dlanet_dcn.py
PalmALNet/CROI/labelGenerator/: train.json  trans.py  val.json
PalmALNet/CROI/labelGenerator/images_train/: rpg1k-00006.xml  rpg1k-00008.xml  rpg1k-00010.xml  rpg1k-00015.xml  rpg1k-00018.xml  rpg1k-00023.xml  rpg1k-00024.xml  rpg1k-00026.xml  rpg1k-00028.xml  rpg1k-00029.xml  rpg1k-00030.xml  rpg1k-00031.xml  rpg1k-00036.xml  rpg1k-00037.xml  rpg1k-00040.xml  rpg1k-00043.xml  rpg1k-00044.xml  rpg1k-00052.xml  rpg1k-00057.xml  rpg1k-00059.xml  rpg1k-00066.xml  rpg1k-00069.xml  rpg1k-00075.xml  rpg1k-00077.xml  rpg1k-00085.xml  rpg1k-00092.xml  rpg1k-00094.xml  rpg1k-00102.xml  rpg1k-00103.xml  rpg1k-00113.xml  rpg1k-00117.xml  rpg1k-00121.xml  rpg1k-00132.xml  rpg1k-00133.xml  rpg1k-00135.xml  rpg1k-00139.xml  rpg1k-00146.xml  rpg1k-00154.xml  rpg1k-00159.xml  rpg1k-00162.xml  (+29 more)
agent_server/: pyproject.toml
entrypoint/: main.py  pyproject.toml
mmpose/: config.py  metainfo.py  td-hm_hrnetv2-w18_dark-8xb32-210e_coco-wholebody-hand-256x256.py
scheduler_agent/: agent.py
src/identifier/: network.py  train.py
(+530 files in other folders)
