[project]
name = "ine5448"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.1",
    "faiss-gpu-cu12>=1.11.0",
    "gdown>=5.2.0",
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "onnxruntime-gpu>=1.22.0",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.9",
    "pytorch-metric-learning>=2.8.1",
    "scipy>=1.15.3",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torch-lr-finder>=0.2.2",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.152",
]
